syntax = "proto3";

package redpanda.api.dataplane.v1alpha1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message TransformMetadata {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128,
    (buf.validate.field).string.pattern = "^[\\P{Cc}\\P{Cf}]+$"
  ];
  string input_topic_name = 2;
  repeated string output_topic_names = 3;
  repeated PartitionTransformStatus statuses = 4;
}

message PartitionTransformStatus {
  int32 broker_id = 1;
  int32 partition_id = 2;
  enum PartitionStatus {
    PARTITION_STATUS_UNSPECIFIED = 0;
    PARTITION_STATUS_RUNNING = 1;
    PARTITION_STATUS_INACTIVE = 2;
    PARTITION_STATUS_ERRORED = 3;
    PARTITION_STATUS_UNKNOWN = 4;
  }
  PartitionStatus status = 3;
  int32 lag = 4;
}

// DeployTransformRequest is not used in a gRPC/Protobuf endpoint but it's
// still used for validation in the HTTP endpoint.
message DeployTransformRequest {
  message EnvironmentVariable {
    string key = 1 [
      (google.api.field_behavior) = REQUIRED,
      (buf.validate.field).required = true,
      (buf.validate.field).string.min_len = 1,
      (buf.validate.field).string.max_len = 128,
      (buf.validate.field).cel = {
        id: "transforms_env_key_does_not_use_redpanda_prefix",
        expression: "!this.startsWith('REDPANDA_')"
        message: "Environment variable keys that start with 'REDPANDA_' are reserved."
      },
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "The key of your environment variable.",
        example: "\"LOG_LEVEL\"",
      }
    ];
    string value = 2 [
      (google.api.field_behavior) = REQUIRED,
      (buf.validate.field).required = true,
      (buf.validate.field).string.min_len = 1,
      (buf.validate.field).string.max_len = 2048,
      (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
        description: "The key of your environment variable.",
        example: "\"DEBUG\"",
      }
    ];
  }

  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128,
    (buf.validate.field).string.pattern = "^[\\P{Cc}\\P{Cf}]+$",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The name of the transform.",
      example: "\"redact-payment-details-in-orders\"",
    }
  ];
  string input_topic_name = 2 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 249,
    (buf.validate.field).string.pattern = "^[a-zA-Z0-9._\\-]*$",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The input topic to apply the transform to.",
      example: "\"orders\"",
    }
  ];
  repeated string output_topic_names = 3 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).repeated = {
      min_items: 1,
      max_items: 1,
      unique: true,
      items: {
        string: {
          min_len: 1,
          max_len: 249,
          pattern: "^[a-zA-Z0-9._\\-]*$"
        }
      }
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The output topic to write the transform results to.",
      example: "\"orders-redacted\"",
    }
  ];
  repeated EnvironmentVariable environment_variables = 4 [
    (buf.validate.field).repeated = {
      min_items: 0,
      max_items: 128,
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "The output topic to write the transform results to.",
      example: "\"orders-redacted\"",
    }
  ];
}

message ListTransformsRequest {
  message Filter {
    string name = 1 [
      (buf.validate.field).string.min_len = 1,
      (buf.validate.field).string.max_len = 128,
      (buf.validate.field).string.pattern = "^[\\P{Cc}\\P{Cf}]+$"
    ];
  }
  Filter filter = 1;
  string page_token = 2;
}

message ListTransformsResponse {
  string next_page_token = 1;
  repeated TransformMetadata transforms = 2;
}

message GetTransformRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128,
    (buf.validate.field).string.pattern = "^[\\P{Cc}\\P{Cf}]+$"
  ];
}

message GetTransformResponse {
  TransformMetadata transform = 1;
}

message DeleteTransformRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128,
    (buf.validate.field).string.pattern = "^[a-zA-Z0-9-_]+$"
  ];
}

message DeleteTransformResponse {}

service TransformService {
  rpc ListTransforms(ListTransformsRequest) returns (ListTransformsResponse) {
    option (google.api.http) = {get: "/v1alpha1/transforms"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List Transforms"
      description: "Retrieve a list of transforms with optional filtering"
      responses: {
        key: "200"
        value: {
          description: "OK"
          schema: {
            json_schema: {ref: ".redpanda.api.dataplane.v1alpha1.ListTransformsResponse"}
          }
        }
      }
    };
  }

  rpc GetTransform(GetTransformRequest) returns (GetTransformResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/transforms/{name}"
      response_body: "transform"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get Transform"
      description: "Get Transform!"
      responses: {
        key: "200"
        value: {
          description: "OK"
          schema: {
            json_schema: {ref: ".redpanda.api.dataplane.v1alpha1.GetTransformResponse"}
          }
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Not Found"
          schema: {
            json_schema: {ref: ".google.rpc.Status"}
          }
        }
      }
    };
  }

  rpc DeleteTransform(DeleteTransformRequest) returns (DeleteTransformResponse) {
    option (google.api.http) = {delete: "/v1alpha1/transforms/{name}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete Transform"
      description: "Delete a WASM transform with the requested name."
      responses: {
        key: "204"
        value: {
          description: "Transform deleted successfully"
          schema: {}
        }
      }
      responses: {
        key: "404"
        value: {
          description: "Not Found"
          schema: {
            json_schema: {ref: ".google.rpc.Status"}
          }
        }
      }
    };
  }
}
